# coman_workspace

./: README.md
coman_shared/: .coman_root  CMakeLists.txt  Readme.txt  ToDo
coman_shared/docs/: ccub-pc104.txt
coman_shared/examples/: Readme.txt  SConstruct
coman_shared/examples/basic/: Boards_ctrl_basic.cpp  Boards_ctrl_basic.h  CMakeLists.txt  SConscript  config.yaml  test_main.cpp
coman_shared/examples/compact_arm/: CMakeLists.txt  SConscript  config.yaml  test_boards_ctrl.cpp  test_main.cpp  xddp_thread.cpp
coman_shared/examples/ecat_test/: SConscript  ecat_shadow  ecat_test.cpp
coman_shared/examples/ecat_test/beckhoff/: ECM_beckhoff.cpp  ECM_beckhoff.h  ec_slaves_struct.h
coman_shared/examples/ecat_test/shadow/: ECM_shadow.cpp  ECM_shadow.h  ec_slaves_struct.h
coman_shared/examples/impedance/: Boards_ctrl_imp.h  CMakeLists.txt  SConscript  config.yaml  impedance_main.cpp
coman_shared/examples/leg_test/: Boards_ctrl_leg.cpp  Boards_ctrl_leg.h  SConscript  config.yaml  leg_boards_ctrl.cpp  leg_main.cpp
coman_shared/examples/lib/: SConscript
coman_shared/examples/microstrain/: CMakeLists.txt  SConscript  imu_test.cpp
coman_shared/examples/torque_calib/: Boards_ctrl_torque_calib.h  CMakeLists.txt  SConscript  calib_main.cpp  config.yaml
coman_shared/examples/walking/: .sconsign.dblite  Boards_ctrl_walk.cpp  Boards_ctrl_walk.h  CMakeLists.txt  GlobalExt.cpp  GlobalExt.h  Manual alex  Matrix.cpp  Matrix.h  RTControl.cpp  RTControl.h  SConscript  Stabilizer.cpp  TestJoint.cpp  test_boards_ctrl.cpp  test_main.cpp
coman_shared/examples/wbmc/: Boards_ctrl_wbmc.cpp  Boards_ctrl_wbmc.h  SConscript  angle_conversions.h  config.yaml  control_loop.cpp  eigen_test.cpp  func_gen.py  min_effort.cpp  spawn_worker.sh  test_main.cpp  worker.cpp  zmq_pub_pull.h
coman_shared/examples/wbmc/cpp/: P_LHand.cpp  P_RHand.cpp  SConscript  dirDyn.cpp  inertia_10_1.cpp  inertia_10_10.cpp  inertia_10_11.cpp  inertia_10_12.cpp  inertia_10_13.cpp  inertia_10_14.cpp  inertia_10_15.cpp  inertia_10_16.cpp  inertia_10_17.cpp  inertia_10_18.cpp  inertia_10_19.cpp  inertia_10_2.cpp  inertia_10_20.cpp  inertia_10_21.cpp  inertia_10_22.cpp  inertia_10_23.cpp  inertia_10_24.cpp  inertia_10_25.cpp  inertia_10_26.cpp  inertia_10_27.cpp  inertia_10_28.cpp  inertia_10_29.cpp  inertia_10_3.cpp  inertia_10_4.cpp  inertia_10_5.cpp  inertia_10_6.cpp  inertia_10_7.cpp  inertia_10_8.cpp  inertia_10_9.cpp  inertia_11_1.cpp  inertia_11_10.cpp  inertia_11_11.cpp  inertia_11_12.cpp  inertia_11_13.cpp  inertia_11_14.cpp  inertia_11_15.cpp  (+836 more)
coman_shared/examples/xddp_console/: CMakeLists.txt  SConscript  xddp_thread.cpp
coman_shared/include/: Boards_ctrl_ext.h  Boards_exception.h  CommProtocol.hpp  DSP_board.h  libKinematics.h
coman_shared/src/coman/: CMakeLists.txt
coman_shared/src/coman/Kinematics/: FwInvK.cpp  Matrix.cpp  Matrix.h  SConstruct
coman_shared/src/ecat/: ECat_master.cpp  ECat_master.h
coman_shared/src/microstrain/: CMakeLists.txt  imu_3DM-GX3-25.cpp  imu_3DM-GX3-25.h
coman_shared/src/os/: CMakeLists.txt  nrt_serial.cpp  nrt_serial.h  nrt_thread.cpp  rt_ipc.cpp  rt_ipc.h  rt_serial.cpp  rt_serial.h  rt_thread.cpp  signals.h  thread_util.h  utils.h  zmq_publisher.cpp  zmq_publisher.h
coman_shared/src/robolli/: Boards_ctrl_ext.cpp  Boards_iface.cpp  Boards_iface.h  CMakeLists.txt  CommProtocol.cpp  DSP_board.cpp  broadcast_data.h  definitions.h
coman_shared/utils/ccub_battery/: Makefile  ccub_battery.sh  read_batt.c
coman_shared/utils/dependencies/: archlinux.sh  ubuntu.sh
coman_shared/utils/python/: DC Motor Controller Interface.xlsx  DcMcBoard.py  Motor Controller Interface.xlsx  TorqueDSP Interface.xlsx  board_data_ctypes.py  board_data_type.py  boards_iface.py  c_gen.py  data_plot.py  myRobot.py  new_bc_data.xlsx  plot3d.py  policy_maps.py  read_xl.py  signal_generator.py  test_lib.py
iit-rtt-coman/microstrain/: CMakeLists.txt  imu_3DM-GX3-25.cpp  imu_3DM-GX3-25.h
iit-rtt-coman/rtt_coman/: CMakeLists.txt
iit-rtt-coman/rtt_coman/config/: config.yaml~
iit-rtt-coman/rtt_coman/include/: kinematic_chain.h  rtt_coman.hpp
iit-rtt-coman/rtt_coman/include/test/: motor_controller_test.h
iit-rtt-coman/rtt_coman/orocos_script/: coman_mc_test.ops  coman_no_forearms_bring_up.ops
iit-rtt-coman/rtt_coman/src/: force_torque_sensor.cpp  kinematic_chain.cpp  rtt_coman.cpp
simData/: tempdata_initSimTime.txt
walking-rtt/: CMakeLists.txt  README.md  RealRobot.cmake  SimRobot.cmake  coman  setup-cogimon-walkingrtt-env.sh
walking-rtt/Walking/include/: Control.hh  init_pos.hh  walking.hpp
walking-rtt/Walking/ops/: TestComanWalking.ops  coman_walking_real.ops  extended_example.ops
walking-rtt/Walking/src/: Control.cc  init_pos.cpp  walking.cpp
walking-rtt/includeall/: AvgFilter.hh  DesiredFtPos.hh  EraseVectors.hh  MedianFilter.h  R2Euler.hh  SensoryCalc.hh  StFtToPelvisFK.hh  StFtToPelvisJac.hh  StackAsVector.hh  SwFtErrJac.hh  SwFtErrJac2.hh  SwFtOrErrJac.hh  SwFtOrToAnk.hh  SwFtPosToHip.hh  SwFtXerrJac.hh  SwFtXtoHipPitch.hh  SwapArrays.hh  WalkingController3.hh  WhichSide.hh  bezier.hh  forward_kinematics_pelvis1.hh  forward_kinematics_swing_foot.hh  h_Jac_compute.hh  imu_data.hh  saturate.hh  user_hard_param.h  virtualSensoryCal.h
walking-rtt/includeall/state_estimation_include/: acc_integration.hh  compute_matrix.hh  compute_x.hh  forward_kinematics.hh  kin_initialize.hh  kinematics.hh  motionless_detect.h  or_integration.hh  rot_vector.hh  rotateIMU.hh  state_estimation.h
walking-rtt/srcall/: StFtToPelvisFK.cc  StFtToPelvisJac.cc  SwFtErrJac.cc  SwFtErrJac2.cc  SwFtOrErrJac.cc  SwFtOrToAnk.cc  SwFtPosToHip.cc  SwFtXerrJac.cc  SwFtXtoHipPitch.cc  WalkingController3.cc  bezier.cc  forward_kinematics_pelvis1.cc  forward_kinematics_swing_foot.cc  h_Jac_compute.cc  imu_data.cc  saturate.cc
walking-rtt/srcall/state_estimation_src/: acc_integration.cpp  compute_matrix.cpp  compute_x.cpp  forward_kinematics.cpp  kin_initialize.cpp  kinematics.cpp  motionless_detect.cc  or_integration.cpp  rot_vector.cpp  rotateIMU.cpp  skew.cpp  state_estimation.cc
(+1 files in other folders)
